Replace email with support page

--- a/content/data/esign/name-match.mdx
+++ b/content/data/esign/name-match.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 
 If you require the capability to match the name and year of birth of the signer with the Aadhaar data received from UIDAI, we can offer that feature during your onboarding process.
 
-No changes will be required on your end. Simply reach out to support@setu.co to enable this feature.
+No changes will be required on your end. Raise a ticket at <a href="https://setu.co/support" target="_blank">Setu Support</a> to enable this feature.
 
 This name match feature is performed by means of fuzzy matching, so you can set a percentage threshold for name matching. Any name match that falls below this threshold will be automatically rejected during the signing process.
 
