--- a/content/payments/billpay/api-integration/quickstart.mdx
+++ b/content/payments/billpay/api-integration/quickstart.mdx
@@ -5,7 +5,8 @@ order: 1
 visible_in_sidebar: true
 ---
 
-## API integration 
+## API integration
+
 Setu BillPay allows you to register as an agent on the BBPS network and enable BBPS bill payments on your app or website. All approvals are done by Setu, our bank partner and BBPS.
 
 This page covers how you can integrate with our APIs, develop corresponding screen flows and go live with BBPS payments.
@@ -15,13 +16,16 @@ This page covers how you can integrate with our APIs, develop corresponding scre
 ### How to integrate
 
 <p>
-  Use provided{" "}
-  <a href="/payments/billpay/api-integration/api-reference" target="_blank">
-    API reference
-  </a>{" "}
-  to start integration. Request for a detailed API run through from Setu team,
-  if needed. Contact us at <a href="">support@setu.co</a>, should you
-  need any help during integration.
+    Use provided{" "}
+    <a href="/payments/billpay/api-integration/api-reference" target="_blank">
+        API reference
+    </a>{" "}
+    to start integration. Request for a detailed API run through from Setu team,
+    if needed. Contact us at{" "}
+    <a href="https://setu.co/support" target="_blank">
+        Setu Support
+    </a>
+    , should you need any help during integration.
 </p>
 
 A summary of the integration process—
@@ -29,7 +33,7 @@ A summary of the integration process—
 1. Get your API keys
 2. Provide details to set up agent
 3. Start API integration
-4. Share screens for NPCI approval 
+4. Share screens for NPCI approval
 5. Run and submit test cases
 6. Get production credentials and go live
 
@@ -69,7 +73,7 @@ You then get a token which can be used to make Authenticated requests to BillPay
 
 ### Step 2 — Provide details to set up agent
 
-To reiterate, an agent is an entity on BBPS, that enables its customers to pay any business that is listed on BBPS. For this, you need to use your details registered on BBPS, with an agent ID, to fetch bills for customers, from BBPS-listed businesses. 
+To reiterate, an agent is an entity on BBPS, that enables its customers to pay any business that is listed on BBPS. For this, you need to use your details registered on BBPS, with an agent ID, to fetch bills for customers, from BBPS-listed businesses.
 
 ###### Share business details
 
@@ -111,17 +115,15 @@ Setu will append the following default paths to this callback URL, to alert your
     .
     <br />
     <br />
-    In case you specify a path, it will get appended to the <code>
-        callbackURL
-    </code> value. If you specify a URL, it will simply override the callback URL
-    value for that particular event.
+    In case you specify a path, it will get appended to the{" "}
+    <code>callbackURL</code> value. If you specify a URL, it will simply
+    override the callback URL value for that particular event.
 </Callout>
 &nbsp;
 
 There are also other events that are not related to the core BillPay APIs, but are updates about the businesses on BBPS.
 
 This would include alerts on businesses that may be delisted from BBPS, or if a business updates the type of identifier they accept to fetch a customer’s bill. If you maintain a database of BBPS businesses, you may want to use such events to stay up-to-date. Find the full list of events <a href="/payments/billpay/api-integration/webhook">here</a>.
-
 
 <hr class="primary" />
 
@@ -135,43 +137,43 @@ Once you have received your API keys and agent ID for testing, you can integrati
 
 The screens you build as part of your app needs to conform to BBPS guidelines. You should submit a document with screenshots for the following screens—
 
-- **Category list screen**, on which all BBPS categories are listed.
-- **Biller list screen**, on which all billers under a selected category are listed.
-- **Customer input screen**, where a customer enters identifiers specific to a selected biller, before their bill can be fetched.
-- **Payment confirmation screen**, on which the customer confirms bill amount and proceeds with payment.
-- **Payment status screen**, when payment is being processed and is finally either successful or failed.
-- **Confirmation SMS**, this is the text that is sent after a payment is successful or failed.
-- **Bill receipt screen**, through which a customer can view and download receipt for a successful transaction.
-- **Raise complaint screen**, where a customer can raise complaint. Complaints are raised against specific transaction IDs.
-- **Complaint status screen**, where a customer can see the latest status associated with registered complaint.
+-   **Category list screen**, on which all BBPS categories are listed.
+-   **Biller list screen**, on which all billers under a selected category are listed.
+-   **Customer input screen**, where a customer enters identifiers specific to a selected biller, before their bill can be fetched.
+-   **Payment confirmation screen**, on which the customer confirms bill amount and proceeds with payment.
+-   **Payment status screen**, when payment is being processed and is finally either successful or failed.
+-   **Confirmation SMS**, this is the text that is sent after a payment is successful or failed.
+-   **Bill receipt screen**, through which a customer can view and download receipt for a successful transaction.
+-   **Raise complaint screen**, where a customer can raise complaint. Complaints are raised against specific transaction IDs.
+-   **Complaint status screen**, where a customer can see the latest status associated with registered complaint.
 
 <Callout type="tip">
-  You may use the BBPS logo and branding guidelines provided{" "}
-  <a
-    href="https://drive.google.com/drive/folders/1CVgy1xuxHKlqnw5BtN4reCaYh13NmGqK?usp=sharing"
-    target="blank"
-  >
-    here
-  </a>
-  .{" "}
+    You may use the BBPS logo and branding guidelines provided{" "}
+    <a
+        href="https://drive.google.com/drive/folders/1CVgy1xuxHKlqnw5BtN4reCaYh13NmGqK?usp=sharing"
+        target="blank"
+    >
+        here
+    </a>
+    .{" "}
 </Callout>
 
 <br />
 
 <p>
-  Here is a{" "}
-  <a
-    href="https://bills.setu.co/cou/categories/91de2627-b66e-49f6-afba-0285c8da9b0a"
-    target="_blank"
-  >
-    BBPS-compliant UX flow
-  </a>{" "}
-  and a quick summary of BBPS guidelines to keep in mind—,
+    Here is a{" "}
+    <a
+        href="https://bills.setu.co/cou/categories/91de2627-b66e-49f6-afba-0285c8da9b0a"
+        target="_blank"
+    >
+        BBPS-compliant UX flow
+    </a>{" "}
+    and a quick summary of BBPS guidelines to keep in mind—,
 </p>
 
-- The app / website UI must contain a button for “Pay bills” with the BBPS logo shown.
-- BBPS logo must be present on top right corner of all screens used by customer during search of biller or bill and also for screens relating to payment of bill.
-- BBPS assured logo must always be shown on the payment sucessful and payment receipt pages. The regular BBPS logo can be removed from these.
+-   The app / website UI must contain a button for “Pay bills” with the BBPS logo shown.
+-   BBPS logo must be present on top right corner of all screens used by customer during search of biller or bill and also for screens relating to payment of bill.
+-   BBPS assured logo must always be shown on the payment sucessful and payment receipt pages. The regular BBPS logo can be removed from these.
 
 <hr class="primary" />
 
@@ -180,8 +182,8 @@ The screens you build as part of your app needs to conform to BBPS guidelines. Y
 Run test cases mentioned in <a href="https://docs.google.com/spreadsheets/d/1h774FCseJKlxYpB2nflN-ONnmEZQiMoF6Ufpiyz0dxA/edit#gid=0" target="_blank"> this document </a> and submit documented results using a copy of the provided file. The results will verified by Setu and the bank to generate production credentials.
 
 <Callout type="warning">
-  Postman logs not considered valid. Share results only once screen integration
-  is complete.{" "}
+    Postman logs not considered valid. Share results only once screen
+    integration is complete.{" "}
 </Callout>
 
 <hr class="primary" />
