--- a/content/payments/billpay/api-integration/deprecated.mdx
+++ b/content/payments/billpay/api-integration/deprecated.mdx
@@ -5,9 +5,13 @@ order: 4
 visible_in_sidebar: false
 ---
 
-## API integration 
-<Callout type="error">This set of APIs has been deprecated. It is recommended to use <a href="/payments/billpay/api-integration">these APIs</a> instead.</Callout>
-<br/>
+## API integration
+
+<Callout type="error">
+    This set of APIs has been deprecated. It is recommended to use{" "}
+    <a href="/payments/billpay/api-integration">these APIs</a> instead.
+</Callout>
+<br />
 
 Setu BillPay allows you to register as an agent on the BBPS network and enable BBPS bill payments on your app or website. All approvals are done by Setu, our bank partner and BBPS.
 
@@ -18,13 +22,16 @@ This page covers how you can integrate with our APIs, develop corresponding scre
 ### How to integrate
 
 <p>
-  Use provided{" "}
-  <a href="/payments/billpay/api-reference" target="_blank">
-    API reference
-  </a>{" "}
-  to start integration. Request for a detailed API run through from Setu team,
-  if needed. Contact us at <a href="">support@setu.co</a>, should you
-  need any help during integration.
+    Use provided{" "}
+    <a href="/payments/billpay/api-reference" target="_blank">
+        API reference
+    </a>{" "}
+    to start integration. Request for a detailed API run through from Setu team,
+    if needed. Contact us at{" "}
+    <a href="https://setu.co/support" target="_blank">
+        Setu Support
+    </a>
+    , should you need any help during integration.
 </p>
 
 A summary of the integration process—
@@ -38,11 +45,14 @@ A summary of the integration process—
 Each of these steps are described in detail below.
 
 <Callout type="highlight">
-  Look at the{" "}
-  <a href="/payments/billpay/api-integration/deprecated/polling" target="_blank">
-    polling mechanism
-  </a>{" "}
-  that should be implemented to correctly retrieve API results.
+    Look at the{" "}
+    <a
+        href="/payments/billpay/api-integration/deprecated/polling"
+        target="_blank"
+    >
+        polling mechanism
+    </a>{" "}
+    that should be implemented to correctly retrieve API results.
 </Callout>
 
 <hr class="primary" />
@@ -52,8 +62,8 @@ Each of these steps are described in detail below.
 UAT credentials are issued after Setu and the bank complete evaluation of your agent application. Using the UAT credentials you can access the Mock / UAT environments.
 
 <Callout type="tip">
-  Use the mock and UAT environment to test your implementation end to end with
-  sample data.{" "}
+    Use the mock and UAT environment to test your implementation end to end with
+    sample data.{" "}
 </Callout>
 
 ##### Mock environment
@@ -65,8 +75,8 @@ The mock environment is provided by Setu to mimic all error codes you would enco
 The UAT environment is a fully integrated environment involving Setu, the bank, BBPS UAT & biller systems.
 
 <Callout type="warning">
-  There is a small chance that the all components may not have uptime since it
-  is UAT.
+    There is a small chance that the all components may not have uptime since it
+    is UAT.
 </Callout>
 
 <hr class="primary" />
@@ -75,43 +85,43 @@ The UAT environment is a fully integrated environment involving Setu, the bank, 
 
 The screens you build as part of your app needs to conform to BBPS guidelines. You should submit a document with screenshots for the following screens—
 
-- **Category list screen**, on which all BBPS categories are listed.
-- **Biller list screen**, on which all billers under a selected category are listed.
-- **Customer input screen**, where a customer enters identifiers specific to a selected biller, before their bill can be fetched.
-- **Payment confirmation screen**, on which the customer confirms bill amount and proceeds with payment.
-- **Payment status screen**, when payment is being processed and is finally either successful or failed.
-- **Confirmation SMS**, this is the text that is sent after a payment is successful or failed.
-- **Bill receipt screen**, through which a customer can view and download receipt for a successful transaction.
-- **Raise complaint screen**, where a customer can raise complaint. Complaints are raised against specific transaction IDs.
-- **Complaint status screen**, where a customer can see the latest status associated with registered complaint.
+-   **Category list screen**, on which all BBPS categories are listed.
+-   **Biller list screen**, on which all billers under a selected category are listed.
+-   **Customer input screen**, where a customer enters identifiers specific to a selected biller, before their bill can be fetched.
+-   **Payment confirmation screen**, on which the customer confirms bill amount and proceeds with payment.
+-   **Payment status screen**, when payment is being processed and is finally either successful or failed.
+-   **Confirmation SMS**, this is the text that is sent after a payment is successful or failed.
+-   **Bill receipt screen**, through which a customer can view and download receipt for a successful transaction.
+-   **Raise complaint screen**, where a customer can raise complaint. Complaints are raised against specific transaction IDs.
+-   **Complaint status screen**, where a customer can see the latest status associated with registered complaint.
 
 <Callout type="tip">
-  You may use the BBPS logo and branding guidelines provided{" "}
-  <a
-    href="https://drive.google.com/drive/folders/1CVgy1xuxHKlqnw5BtN4reCaYh13NmGqK?usp=sharing"
-    target="blank"
-  >
-    here
-  </a>
-  .{" "}
+    You may use the BBPS logo and branding guidelines provided{" "}
+    <a
+        href="https://drive.google.com/drive/folders/1CVgy1xuxHKlqnw5BtN4reCaYh13NmGqK?usp=sharing"
+        target="blank"
+    >
+        here
+    </a>
+    .{" "}
 </Callout>
 
 <br />
 
 <p>
-  Here is a{" "}
-  <a
-    href="https://bills.setu.co/cou/categories/91de2627-b66e-49f6-afba-0285c8da9b0a"
-    target="_blank"
-  >
-    BBPS-compliant UX flow
-  </a>{" "}
-  and a quick summary of BBPS guidelines to keep in mind—,
+    Here is a{" "}
+    <a
+        href="https://bills.setu.co/cou/categories/91de2627-b66e-49f6-afba-0285c8da9b0a"
+        target="_blank"
+    >
+        BBPS-compliant UX flow
+    </a>{" "}
+    and a quick summary of BBPS guidelines to keep in mind—,
 </p>
 
-- The app / website UI must contain a button for “Pay bills” with the BBPS logo shown.
-- BBPS logo must be present on top right corner of all screens used by customer during search of biller or bill and also for screens relating to payment of bill.
-- BBPS assured logo must always be shown on the payment sucessful and payment receipt pages. The regular BBPS logo can be removed from these.
+-   The app / website UI must contain a button for “Pay bills” with the BBPS logo shown.
+-   BBPS logo must be present on top right corner of all screens used by customer during search of biller or bill and also for screens relating to payment of bill.
+-   BBPS assured logo must always be shown on the payment sucessful and payment receipt pages. The regular BBPS logo can be removed from these.
 
 <hr class="primary" />
 
@@ -120,8 +130,8 @@ The screens you build as part of your app needs to conform to BBPS guidelines. Y
 Run test cases mentioned in <a href="https://docs.google.com/spreadsheets/d/1h774FCseJKlxYpB2nflN-ONnmEZQiMoF6Ufpiyz0dxA/edit#gid=0" target="_blank"> this document </a> and submit documented results using a copy of the provided file. The results will verified by Setu and the bank to generate production credentials.
 
 <Callout type="warning">
-  Postman logs not considered valid. Share results only once screen integration
-  is complete.{" "}
+    Postman logs not considered valid. Share results only once screen
+    integration is complete.{" "}
 </Callout>
 
 <hr class="primary" />
@@ -130,19 +140,19 @@ Run test cases mentioned in <a href="https://docs.google.com/spreadsheets/d/1h77
 
 To operate on BBPS as an agent you need to create an agent ID. You need to submit details in a format specified by Setu, and you will get agent ID corresponding to one of the following agent categories—
 
-- Internet banking
-- Internet application
-- Mobile banking
-- Mobile application
-- Business correspondent
-- Bank branch
-- ATM
-- Kiosk
-- Offline agent
+-   Internet banking
+-   Internet application
+-   Mobile banking
+-   Mobile application
+-   Business correspondent
+-   Bank branch
+-   ATM
+-   Kiosk
+-   Offline agent
 
 <Callout type="tip">
-  If you wish to support any offline collections, you will need to create agent
-  IDs for all your offline collection points.
+    If you wish to support any offline collections, you will need to create
+    agent IDs for all your offline collection points.
 </Callout>
 
 <hr class="primary" />
