FInal set of changes

--- a/content/payments/upi-deeplinks/failure-notification.mdx
+++ b/content/payments/upi-deeplinks/failure-notification.mdx
@@ -8,10 +8,6 @@ visible_in_sidebar: false
 
 ## Failure Notifications
 
-#### Outgoing event alerts sent by Setu to partners.
-
-Currently, there is only one event `BILL_SETTLEMENT_STATUS`, which triggers a failure notification.
-
 <hr class="primary" />
 
 ### Bill fulfilment status
@@ -24,7 +20,7 @@ After Setu receives a callback from the bank for a particular payment, we send a
 
 A payment can fail for multiple reasons as explained below:
 
-| **Status Code** | **Reason**                                               | **Description**                                                | **Next Steps for Merchants**                                  |
+| **NPCI Status Code** | **NPCI Status Reason**                                               | **Setu Description**                                                | **Next Steps for Merchants**                                  |
 |-------------|------------------------------------------------------|------------------------------------------------------------|---------------------------------------------------------|
 | U30         | DEBIT HAS BEEN FAILED                               | The customer's debit attempt failed.                      | Inform the customer and ask them to try again or use a different payment method.              |
 | U09         | REQAUTH TIME OUT FOR PAY                            | Payment authorization took too long.                     | Ask the customer to try again. If it continues, reach out to Setu support.                    |
