--- a/content/data/account-aggregator/api-integration/data-apis.mdx
+++ b/content/data/account-aggregator/api-integration/data-apis.mdx
@@ -9,8 +9,8 @@ visible_in_sidebar: true
 
 Below is a summary of the APIs you need to use to fetch FI data. These APIs are to be used only once your customer has approved consent request. The flow mainly involves data fetching against a valid data session with below APIs.
 
--   **Create Data Session**—Call this API against an `APPROVED` consent. This initiates data preparation at user's linked FIP accounts. You will be notified by Setu once the data is ready to be fetched.
--   **Fetch FI data**—Fetch decrypted FI data with data session id.
+- **Create Data Session**—Call this API against an `APPROVED` consent. This initiates data preparation at user's linked FIP accounts. You will be notified by Setu once the data is ready to be fetched.
+- **Fetch FI data**—Fetch decrypted FI data with data session id.
 
 ![](https://storage.googleapis.com/strapi-assets/latest/data_session_56485983c0/data_session_56485983c0.png)
 
@@ -25,15 +25,15 @@ Call this API to create a data session against the approved `consentId`.
 Specify the format in which you wish to receive the decrypted financial data, this can be **xml** or **json**.
 
 <Callout type="tip">
-    Make sure that values of <code>dataRange</code> array in the body, matches
-    or is within the <code>FIDataRange</code> specified in the Create consent
-    request API.
+  Make sure that values of <code>dataRange</code> array in the body, matches or
+  is within the <code>FIDataRange</code> specified in the Create consent request
+  API.
 </Callout>
 
 <br />
 
 <CodeBlockWithCopy language="json">
-    {`POST /sessions
+  {`POST /sessions
 {
     "consentId": "d4f40bd9-a22f-4408-a622-4e8a1e4fbda6",
     "dataRange": {
@@ -154,7 +154,9 @@ Specify the format in which you wish to receive the decrypted financial data, th
 
 ### Fetch FI data
 
-The notification URL you have configured with Setu will be used to notify you when data is ready to be fetched. Then,use the `id` received in Create Data Session API in the previous step to call this API to fetch the financial information of your user.
+For each data session created, Setu will notify you on the webhook endpoint configured by you, as and when each FIP in the data session responds with an update. See <a href="/data/account-aggregator/api-integration/notifications#fi-notification">FI notifications</a>.
+
+When the combined data session status in the notification is either `PARTIAL` or `COMPLETED`, you can fetch FI data with this API.
 
 ##### Request
 
@@ -176,23 +178,128 @@ If you request for multiple FI types, you will receive all the FI data from end-
                             
                             
                             <h5>Response</h5>
-                            <p>The response comes with status:
-
--   `COMPLETED` which signifies that FI data fetch is completed for the requested session.
--   `PARTIAL` which signifies that some FIP FI data fetches are completed and some have failed for the requested session.
--   `PENDING` which signifies that some FIP FI data fetches are completed and some are still pending for the requested session.
-
-The payload contains Profile, Summary and Transactions as requested in Create consent request.
+                            <p>The response comes with two statuses—
+                            <ul>
+                                <li>Individual account FI status</li>
+                                <li>Combined data session status</li>
+                            </ul>
+                            <table>
+                                <tr>
+                                    <th>
+                                        <b>Individual account FI status</b>
+                                    </th>
+                                    <th>
+                                        <b>Explanation</b>
+                                    </th>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <code>PENDING</code>
+                                    </td>
+                                    <td>
+                                        FIP has received the account data request
+                                    </td>
+                                </tr>
+                                 <tr>
+                                    <td>
+                                        <code>READY</code>
+                                    </td>
+                                    <td>
+                                        FIP is ready with the requested account data 
+                                    </td>
+                                </tr>
+                                 <tr>
+                                    <td>
+                                        <code>DELIVERED</code>
+                                    </td>
+                                    <td>
+                                        FIP has delivered the requested account data 
+                                    </td>
+                                </tr>
+                                 <tr>
+                                    <td>
+                                        <code>TIMEOUT</code>
+                                    </td>
+                                    <td>
+                                        The account data request to the FIP has timed out 
+                                    </td>
+                                </tr>
+                                 <tr>
+                                    <td>
+                                        <code>DENIED</code>
+                                    </td>
+                                    <td>
+                                        FIP has denied sharing the requested account data 
+                                    </td>
+                                </tr>
+                            </table>
+                            <br />
+                            <table>
+                                <tr>
+                                    <th>
+                                        <b>Combined data session status</b>
+                                    </th>
+                                    <th>
+                                        <b>Individual account FI status</b>
+                                    </th>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <code>PENDING</code>
+                                    </td>
+                                    <td>
+                                        Individual account FI status of all accounts in the data session are in <code>PENDING</code> status. Data fetch for this data session was not supposed to be initiated.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <code>PARTIAL</code>
+                                    </td>
+                                    <td>
+                                        One or more accounts have individual FI account status as <code>READY</code> but the remaining have status as <code>PENDING</code>/<code>FAILED</code>/<code>TIMEOUT</code>. Only data from accounts with status as <code>READY</code> was fetched.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <code>COMPLETED</code>
+                                    </td>
+                                    <td>
+                                        Individual account FI status of all accounts is <code>READY</code> and data from all accounts was fetched.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <code>EXPIRED</code>
+                                    </td>
+                                    <td>
+                                        Data session has expired, irrespective of individual account FI statuses. No further fetches can happen for this data session.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <code>FAILED</code>
+                                    </td>
+                                    <td>
+                                        Data session has failed, irrespective of individual account FI statuses. Retry by creating a new data session.
+                                    </td>
+                                </tr>
+                            </table>
+<br />
+The payload contains Profile, Summary and Transactions as requested in Create consent
+request.
 
 </p>
                             <CodeBlockWithCopy language="json">
     {`{
-  "status": "PARTIAL",
+  "status": "PARTIAL", // combined data session status
   "format": "json",
   "fips": [
     {
       "accounts": [
         {
+          "linkRefNumber": "b2329f47-0a6f-4131-adb5-9ef7b4c1ca6a",
+          "maskedAccNumber": "XXXXXX4373",
+          "status": "DELIVERED" // individual account FI status
           "data": {
             "account": {
               "linkedAccRef": "b2329f47-0a6f-4131-adb5-9ef7b4c1ca6a",
@@ -240,9 +347,6 @@ The payload contains Profile, Summary and Transactions as requested in Create co
               }
             }
           },
-          "linkRefNumber": "b2329f47-0a6f-4131-adb5-9ef7b4c1ca6a",
-          "maskedAccNumber": "XXXXXX4373",
-          "status": "DELIVERED"
         }
       ],
       "fipID": "Setu-FIP"
@@ -252,7 +356,7 @@ The payload contains Profile, Summary and Transactions as requested in Create co
         {
           "linkRefNumber": "b2329f47-0a6f-4131-adb5-9ef7b4c1ca6a",
           "maskedAccNumber": "XXXXXX4373",
-          "status": "FAILED",
+          "status": "FAILED",  // individual account FI status
           "data": null
         }
       ],
@@ -333,5 +437,20 @@ The payload contains Profile, Summary and Transactions as requested in Create co
         ></Tabs>
     </Portion>
 </Row>
+
+<hr class="primary" />
+
+### Auto data fetch feature
+
+As seen above, once a consent is approved, FIUs need to create a data session, listen to notifications and then fetch FI data.
+
+Auto data fetch feature aims to absorb this complexity from the FIUs. With Auto data fetch feature enabled, the process will look like this—
+
+- Consent is approved by the customer.
+- Setu creates a data session automatically.
+- Setu listens to FI notifications and manages retries.
+- Once the combined data session status is `READY` or `PARTIAL`, Setu fetches the FI data and sends it to the FIU.
+  - For one time consents, Auto data fetch executes done only once, right after the consent is approved.
+  - For recurring consents, Auto data fetch can fetch data periodically. Set up the frequency of Auto data fetch in your configuration on the Bridge.
 
 <WasPageHelpful />
