--- a/content/data/account-aggregator/api-integration/data-apis.mdx
+++ b/content/data/account-aggregator/api-integration/data-apis.mdx
@@ -444,7 +444,7 @@ request.
 
 As seen above, once a consent is approved, FIUs need to create a data session, listen to notifications and then fetch FI data.
 
-Auto data fetch feature aims to absorb this complexity from the FIUs. With Auto data fetch feature enabled, the process will look like this—
+Auto data fetch feature aims to absorb this complexity from the FIUs. With Auto data fetch feature is enabled, the process will look like this—
 
 - Consent is approved by the customer.
 - Setu creates a data session automatically.
