Fix hardcoded staging links

--- a/content/data/account-aggregator/fi-data-types.mdx
+++ b/content/data/account-aggregator/fi-data-types.mdx
@@ -20,13 +20,13 @@ Setu FIP to help you get access to rich mock data for FI type **Deposit** as per
 
 ###### **How to test?**
 
-1. Call Create Consent Request [API](https://staging.docs.setu.co/data/account-aggregator/api-integration/consent-flow)
+1. Call Create Consent Request [API](/data/account-aggregator/api-integration/consent-flow)
 2. Open url to initiate consent manager flow
 3. Select and link Setu FIP and approve the consent<br/>
    - _The approved consent allows you to initiate Data flow with Setu FIP_<br/>
-4. Create a [Data Session](https://staging.docs.setu.co/data/account-aggregator/api-integration/data-apis#create-new-data-session-api) for the approved consent<br/>
+4. Create a [Data Session](/data/account-aggregator/api-integration/data-apis#create-new-data-session-api) for the approved consent<br/>
    - _Setu FIP prepares the data as per your consent request_<br/>
-5. Call [Fetch FI Data](https://staging.docs.setu.co/data/account-aggregator/api-integration/data-apis#create-new-data-session-api) and get Deposit FI data from Setu FIP<br/>
+5. Call [Fetch FI Data](/data/account-aggregator/api-integration/data-apis#create-new-data-session-api) and get Deposit FI data from Setu FIP<br/>
 
 <Callout type="highlight">
   Financial data from Setu FIP is available in <strong>xml</strong> and{" "}
