--- a/content/data/account-aggregator/api-integration/data-apis.mdx
+++ b/content/data/account-aggregator/api-integration/data-apis.mdx
@@ -444,12 +444,12 @@ request.
 
 As seen above, once a consent is approved, FIUs need to create a data session, listen to notifications and then fetch FI data.
 
-Auto data fetch feature aims to absorb this complexity from the FIUs. With Auto data fetch feature is enabled, the process will look like this—
+Auto data fetch feature aims to absorb this complexity from the FIUs. With Auto data fetch feature enabled, the process will look like this—
 
 - Consent is approved by the customer.
 - Setu creates a data session automatically.
 - Setu listens to FI notifications and manages retries.
-- Once the combined data session status is `READY` or `PARTIAL`, Setu fetches the FI data and sends it to the FIU.
+- Once the combined data session status is `PARTIAL` or `COMPLETED`, Setu fetches the FI data and sends it to the FIU.
   - For one time consents, Auto data fetch executes done only once, right after the consent is approved.
   - For recurring consents, Auto data fetch can fetch data periodically. Set up the frequency of Auto data fetch in your configuration on the Bridge.
 
