Update terminology of semi auto discovery to lite auto discovery

--- a/content/data/account-aggregator/embed-setu-aa.mdx
+++ b/content/data/account-aggregator/embed-setu-aa.mdx
@@ -29,7 +29,7 @@ The Account Aggregator ecosystem does not have a native method to truly auto dis
       <b>Setu managed</b> <br /> FIU does not know the user's bank(s) before AA
       flow
     </td>
-    <td>Semi auto discovery</td>
+    <td>Lite auto discovery</td>
     <td>When the user is likely to have accounts in popular banks</td>
     <td>
       Accounts in top banks are auto discovered. Can fallback to manual
@@ -68,7 +68,7 @@ The Account Aggregator ecosystem does not have a native method to truly auto dis
   >
     {/* <img src="https://storage.googleapis.com/strapi-assets/latest/first_frame_7d2e0263d8/first_frame_7d2e0263d8.png" />
     <Text align="center" marginTop="none">
-      Setu managed semi auto discovery
+      Setu managed lite auto discovery
     </Text> */}
   </Portion>
   <Portion
