Remove consent template and fix typos

--- a/content/data/account-aggregator/api-integration/data-apis.mdx
+++ b/content/data/account-aggregator/api-integration/data-apis.mdx
@@ -450,7 +450,7 @@ Auto data fetch feature aims to absorb this complexity from the FIUs. With Auto 
 - Setu creates a data session automatically.
 - Setu listens to FI notifications and manages retries.
 - Once the combined data session status is `PARTIAL` or `COMPLETED`, Setu fetches the FI data and sends it to the FIU.
-  - For one time consents, Auto data fetch executes done only once, right after the consent is approved.
+  - For one time consents, Auto data fetch executes only once, right after the consent is approved.
   - For recurring consents, Auto data fetch can fetch data periodically. Set up the frequency of Auto data fetch in your configuration on the Bridge.
 
 <WasPageHelpful />
