--- a/content/data/account-aggregator/embed-setu-aa.mdx
+++ b/content/data/account-aggregator/embed-setu-aa.mdx
@@ -91,7 +91,7 @@ The Account Aggregator ecosystem does not have a native method to truly auto dis
   </Portion>
 </Row>
 
-##### FIU managed guided discovery
+##### FIU managed guided auto discovery
 
 To implement this discovery method, FIUs must send the list of FIPs (max 6) that should be used for a particular consent, via the <a href="/data/account-aggregator/consent-object#consent-request-object">context</a> property of the consent object.
 
