Add context filter examples and tweak auto fetch content

--- a/content/data/account-aggregator/consent-object.mdx
+++ b/content/data/account-aggregator/consent-object.mdx
@@ -37,7 +37,42 @@ Consent object contains the information about all the different types of data th
 | `redirectUrl`                                                 | Redirect your users back to your application once the consent is reviewed. By default, the redirectURL is https://setu.co/.                                                                                                                                                                                                                                                                                  | Yes                                                            |
 | `context`                                                     | Allows you to specify an FIP OR Account type (Current, Savings, Insurance, etc) as a key value pair for you to be able to customise the accounts fetched on the consent flow. We support the context filters `accounttype` which takes the Key as `accounttype` where values can be `CURRENT` or `SAVINGS` and `fipid` with the `FIP ID` as the value(s).                                                    | No                                                             |
 
-<br />
+#### Context property examples
+
+**Filter by account type**
+
+<CodeBlockWithCopy language="json">
+  {`"context": [
+    {
+      "key": "accounttype",
+      "value": "CURRENT"
+    }
+  ]`}
+</CodeBlockWithCopy>
+
+**Filter by FIP ids**
+
+<CodeBlockWithCopy language="json">
+  {`"context": [
+    {
+      "key": "fipId",
+      "value": "setu-fip,icici-fip"
+    }
+  ]`}
+</CodeBlockWithCopy>
+
+**Filter by excluding FIP ids**
+
+<CodeBlockWithCopy language="json">
+  {`"context": [
+    {
+      "key": "excludeFipIds",
+      "value": "setu-fip,icici-fip"
+    }
+  ]`}
+</CodeBlockWithCopy>
+
+<hr class="primary" />
 
 ### Consent response object
 
