Fix autofetch bill wording

--- a/content/payments/billpay/api-integration/quickstart.mdx
+++ b/content/payments/billpay/api-integration/quickstart.mdx
@@ -87,7 +87,7 @@ It is recommended that you set up a callback URL to receive notifications for va
 -   APIs to validate customer identifier with a biller
 -   APIs to for completing a bill payment
 -   APIs to raise disputes against a payment
--   APIs to receive a bill due notification
+-   APIs to receive an automatic bill due notification
 
 When this is enabled by you, any successful `fetch`, `validate`, `payment`, `dispute` or `autofetch` event gets posted to your callback URL.
 
@@ -95,13 +95,13 @@ You may specify only one callback URL. **This should be a valid URI string that 
 
 Setu will append the following default paths to this callback URL, to alert your on specific events—
 
-| Event type              | Path                       |
-| ----------------------- | -------------------------- |
-| `fetch` a bill          | `/bills/fetch/response`    |
-| `validate` bill details | `/bills/validate/response` |
-| `payment` of bill       | `/bills/payment/response`  |
-| `dispute` against bill  | `/bills/dispute/response`  |
-| `autofetch` againt bill | `/bills/autofetch/response` |
+| Event type              | Path                        |
+|-------------------------|-----------------------------|
+| `fetch` a bill          | `/bills/fetch/response`     |
+| `validate` bill details | `/bills/validate/response`  |
+| `payment` of bill       | `/bills/payment/response`   |
+| `dispute` against bill  | `/bills/dispute/response`   |
+| `autofetch` of a bill   | `/bills/autofetch/response` |
 
 <br />
 <br />
