Add account discovery method GIFs

--- a/content/data/account-aggregator/embed-setu-aa.mdx
+++ b/content/data/account-aggregator/embed-setu-aa.mdx
@@ -66,10 +66,10 @@ The Account Aggregator ecosystem does not have a native method to truly auto dis
     tabletPortraitSpan="12"
     mobileSpan="12"
   >
-    {/* <img src="https://storage.googleapis.com/strapi-assets/latest/first_frame_7d2e0263d8/first_frame_7d2e0263d8.png" />
+    <img src="https://storage.googleapis.com/strapi-assets/latest/Lite-auto-discovery/Lite-auto-discovery.gif" />
     <Text align="center" marginTop="none">
-      Setu managed lite auto discovery
-    </Text> */}
+      <b>Setu managed lite auto discovery</b>
+    </Text>
   </Portion>
   <Portion
     desktopSpan="8"
@@ -77,8 +77,10 @@ The Account Aggregator ecosystem does not have a native method to truly auto dis
     tabletPortraitSpan="12"
     mobileSpan="12"
   >
-    {/* <img src="https://storage.googleapis.com/strapi-assets/latest/first_frame_7d2e0263d8/first_frame_7d2e0263d8.png" />
-    <Text align="center">Setu managed manual discovery</Text> */}
+    <img src="https://storage.googleapis.com/strapi-assets/latest/Manual-discovery/Manual-discovery.gif" />
+    <Text align="center">
+      <b>Setu managed manual discovery</b>
+    </Text>
   </Portion>
   <Portion
     desktopSpan="8"
@@ -86,10 +88,13 @@ The Account Aggregator ecosystem does not have a native method to truly auto dis
     tabletPortraitSpan="12"
     mobileSpan="12"
   >
-    {/* <img src="https://storage.googleapis.com/strapi-assets/latest/first_frame_7d2e0263d8/first_frame_7d2e0263d8.png" />
-    <Text align="center">FIU managed guided auto discovery</Text> */}
+    <img src="https://storage.googleapis.com/strapi-assets/latest/Guided-auto-discovery/Guided-auto-discovery.gif" />
+    <Text align="center">
+      <b>FIU managed guided auto discovery</b>
+    </Text>
   </Portion>
 </Row>
+<br />
 
 ##### FIU managed guided auto discovery
 
