add product instance id to all authenticated request headers

--- a/content/data/bav/penny-drop/api-integration/async.mdx
+++ b/content/data/bav/penny-drop/api-integration/async.mdx
@@ -19,6 +19,7 @@ Here are the URLs you would need for this integration—
 - Headers—Contact Setu for providing the credentials required to successfully call Setu APIs. This contains:
   - `x-client-id`
   - `x-client-secret`
+  - `x-product-instance-id`
 
 <hr class="primary" />
 
