--- a/content/data/bav/penny-drop/api-integration/sync.mdx
+++ b/content/data/bav/penny-drop/api-integration/sync.mdx
@@ -18,6 +18,7 @@ Here are the URLs you would need for this integration—
 - Headers—Contact Setu for providing the credentials required to successfully call Setu APIs. This contains:
   - `x-client-id`
   - `x-client-secret`
+  - `x-product-instance-id`
 
 <Callout type="warning">
   While this is a simpler implementation, the experience for your end customer
