--- a/content/data/gst/quickstart.mdx
+++ b/content/data/gst/quickstart.mdx
@@ -35,6 +35,7 @@ The URLs you would need for this API—
 -   Headers—Contact Setu for providing the credentials required to successfully call Setu APIs. This contains:
     -   `x-client-id`
     -   `x-client-secret`
+    -   `x-product-instance-id`
 
 <hr className="primary" />
 
