--- a/content/data/okyc/pre-built-screens.mdx
+++ b/content/data/okyc/pre-built-screens.mdx
@@ -22,6 +22,7 @@ Additionally, here are the URLs you would need for these APIs—
 - Headers—Contact Setu for providing the credentials required to successfully call Setu APIs. This contains:
   - `x-client-id`
   - `x-client-secret`
+  - `x-product-instance-id`
 
 ### Create OKYC request
 
