--- a/content/data/pan/quickstart.mdx
+++ b/content/data/pan/quickstart.mdx
@@ -22,6 +22,7 @@ Here’s a quick overview of the PAN API. Additionally, here are the URLs you wo
 - Headers—Contact Setu for providing the credentials required to successfully call Setu APIs. This contains:
   - `x-client-id`
   - `x-client-secret`
+  - `x-product-instance-id`
 
 <hr className="primary" />
 
