--- a/content/data/esign/quickstart.mdx
+++ b/content/data/esign/quickstart.mdx
@@ -31,6 +31,7 @@ Additionally, here are the URLs you would need for these APIs—
 -   Headers—Contact Setu for providing the credentials required to successfully call Setu APIs. This contains:
     -   `x-client-id`
     -   `x-client-secret`
+    -   `x-product-instance-id`
 
 <hr class="primary" />
 
