--- a/content/data/bav/setu-bav/api-integration.mdx
+++ b/content/data/bav/setu-bav/api-integration.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: SETU BAV
+sidebar_title: API Integration
 page_title: SETU BAV API Integration
 order: 1
 visible_in_sidebar: true
